# CDH-BE

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  파일구조
.github/workflows/: docker-image.yml
api/: database.py  main.py  pyproject.toml
api/domain/api/: api_crud.py  api_router.py  api_schema.py
api/domain/calendar/: calendar_crud.py  calendar_router.py  calendar_schema.py
api/domain/erd/: erd_crud.py  erd_router.py  erd_schema.py
api/domain/langchain/: langchain_DB.py  langchain_main_model.py  langchain_model.py  langchain_models.py  langchain_nodes.py  langchain_router.py  langchain_schema.py  langchian_crud.py
api/domain/note/: note_crud.py  note_router.py  note_schema.py
api/domain/setting/: setting_crud.py  setting_router.py  setting_schema.py
api/domain/teamspace/: teamspace_crud.py  teamspace_router.py  teamspace_schema.py
api/models/: ORM.py  tasks.py
api/routers/: tasks.py
api/templates/: index.html
api_testing/: tasks.py
chroma_db/: chroma.sqlite3
faiss_db/: faiss_index.faiss  faiss_index.pkl
migrations/: env.py
migrations/versions/: 048066f76935_.py  07a0ef49c7f5_initial_async_migration.py  08afd278e3fd_.py  0d4c06237f14_.py  0eecab1d8cf9_initial_async_migration.py  0fad4b28b04a_.py  10248d811a91_.py  139c9d72b7e6_.py  14c76a7ae159_.py  151ae7c78fad_.py  2226a171b0de_.py  23eeee8c70fc_.py  27739232af6f_.py  296c36b86158_.py  2ea37dcbf09e_.py  2f3e52068989_.py  31a0062e2e7f_.py  35fcd38d34d0_.py  3df7f4a03cb3_.py  3e04ffa8c4bb_.py  468df19db4b9_.py  47551d3699f4_.py  489cbdf16dbe_.py  4a38ac514130_.py  4d1dfab8bc1c_.py  52d115e4535f_.py  53f842896aaf_.py  5794ef7dab08_.py  579524efab24_.py  57c6e2abf5fe_.py  58381085f509_.py  58acb15d44b9_.py  59a8e401eaa8_.py  5c5e57e629aa_.py  5c64592d2df8_.py  5c851047c51e_.py  5cdbed9ea830_.py  6554bdbe3336_.py  666f557f2073_.py  6b98550725c1_initial_async_migration.py  (+52 more)
(+4 files in other folders)
